# axo-sh

./: .env  Cargo.toml  LICENSE.md  README.md
src/: actions.rs  handlers.rs  main.rs  models.rs
static/root/: index.html
static/root/css/: index.css
static/root/js/: index.js
