[package]
name = "axo-sh"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.4"
serde = "1.0.130"
dotenv = "0.15.0"
actix-web = "3.3.2"

[dependencies.url]
version = "2.2.2"
features = ["serde"]

[dependencies.mongodb]
version = "2.0.1"
default-features = false
features = ["async-std-runtime"]